--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     .flower {
       position: absolute;
-      width: 1000px;
+      width: 250px; /* Increased size */
       animation: burst 2s ease-out forwards;
     }
 
@@ -54,15 +54,15 @@
   <div class="message" id="secretMessage">Your total amount is ♾️ kisses and ♾️ hugs</div>
 
   <audio id="backgroundMusic" autoplay loop>
-    <source src="music.mp3" type="audio/mpeg">
+    <source src="your-music-file.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
 
   <script>
     const flowerURLs = [
-      'flower1.png',
-      'flower2.png',
-      'flower3.png'
+      'https://i.imgur.com/1fZpZWy.png',
+      'https://i.imgur.com/N7Z4g9J.png',
+      'https://i.imgur.com/Pl8HyqC.png'
     ];
 
     for (let i = 0; i < 30; i++) {
