--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 
   <script>
     const flowerURLs = [
-      'https://i.imgur.com/1fZpZWy.png',
-      'https://i.imgur.com/N7Z4g9J.png',
-      'https://i.imgur.com/Pl8HyqC.png'
+      'flower1.png',
+      'flower2.png',
+      'flower3.png'
     ];
 
     for (let i = 0; i < 30; i++) {
