--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
       font-size: 24px;
       color: #d63384;
       transition: opacity 2s ease;
+      z-index: 1000;
+      position: relative;
     }
 
     .show {
