--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
     .message {
       opacity: 0;
       margin-top: 30px;
-      font-size: 24px;
-      color: #d63384;
+      font-size: 72px;
+      color: white;
+      text-shadow: 2px 2px 0 #000, -2px 2px 0 #000, 2px -2px 0 #000, -2px -2px 0 #000;
       transition: opacity 2s ease;
       z-index: 1000;
       position: relative;
