--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       transition: opacity 2s ease;
       z-index: 1000;
       position: relative;
+      text-align: center;
     }
 
     .show {
