--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <div class="message" id="secretMessage">Your total amount is ♾️ kisses and ♾️ hugs</div>
 
   <audio id="backgroundMusic" autoplay loop>
-    <source src="your-music-file.mp3" type="audio/mpeg">
+    <source src="music.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
 
